# gspits

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tasks.py
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
docs/source/api/: gspits.mesh.md  gspits.potentials.harmonic.md  gspits.potentials.md  index.md  mesh.md  system.md
docs/source/api/potentials/: index.md  onedim.md
src/gspits/: __init__.py  mesh.py  system.py
src/gspits/noninteracting/: __init__.py  tsps.py
src/gspits/one_dim/: __init__.py  gs_single.py  hamiltonian.py  potential.py  single.py  system.py
src/gspits/one_dim/singlespecies/: __init__.py  groundstate.py  hamiltonians.py
src/gspits/potentials/: __init__.py  harmonic.py  onedim.py
tests/: __init__.py  test_gspits.py  test_mesh.py  test_system.py
tests/noninteracting/: __init__.py  test_tsps_harmonic_end_to_end.py
tests/one_dim/: test_gs_single.py  test_hamiltonian.py  test_potential.py  test_single.py  test_system.py
tests/one_dim/singlespecies/: test_groundstate.py  test_hamiltonians.py
tests/potentials/: test_harmonic.py  test_onedim.py
